feat: endpoint for register new user
