# server/server-routes.ts
@@ -3,30 +3,46 @@ import TodoRepository from './api/todo/todoRepository';
 import dbConnection from './database/connection';
 import TodoService from './api/todo/todoService';
 import TodoController from './api/todo/todoController';
+import UserRepository from './api/user/userRepository';
+import OrganizationRepository from './api/organization/organizationRepository';
+import AuthService from './api/auth/authService';
+import AuthController from './api/auth/authController';
 
-export const todoRouter = Router();
+export const routers = Router();
 
+// repositories
 const todoRepository = new TodoRepository(dbConnection);
-const todoService = new TodoService(todoRepository);
-const todoController = new TodoController(todoService);
+const userRepository = new UserRepository(dbConnection);
+const organizationRepository = new OrganizationRepository(dbConnection);
 
-todoRouter.get('/todo', (req: Request, res: Response) =>
+// services
+const todoService = new TodoService(todoRepository);
+const authService = new AuthService(userRepository, organizationRepository);
+
+// controllers
+const todoController = new TodoController(todoService);
+const authController = new AuthController(authService);
+
+routers.get('/todo', (req: Request, res: Response) =>
     todoController.getAllTodos(req, res)
 );
-todoRouter.get('/todo/:id', (req: Request, res: Response) =>
+routers.get('/todo/:id', (req: Request, res: Response) =>
     todoController.getTodo(req, res)
 );
-
-todoRouter.post('/todo', (req: Request, res: Response) =>
+routers.post('/todo', (req: Request, res: Response) =>
     todoController.postTodo(req, res)
 );
-todoRouter.patch('/todo/:id', (req: Request, res: Response) =>
+routers.patch('/todo/:id', (req: Request, res: Response) =>
     todoController.patchTodo(req, res)
 );
-
-todoRouter.delete('/todo', (req: Request, res: Response) =>
+routers.delete('/todo', (req: Request, res: Response) =>
     todoController.deleteAllTodos(req, res)
 );
-todoRouter.delete('/todo/:id', (req: Request, res: Response) =>
+routers.delete('/todo/:id', (req: Request, res: Response) =>
     todoController.deleteTodo(req, res)
+);
+
+// Auth Routes
+routers.post('/auth/register', (req: Request, res: Response) =>
+    authController.register(req, res)
 );
